HomeTask3Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: home-task-3-service
spec:
  type: NodePort
  selector:
    app: home-task-3
  ports:
    - targetPort: 8000
      port: 80
